--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css" /> -->
   <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
   <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
-<link rel="manifest" href="./favicon_io/site.webmanifest">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
+  <link rel="manifest" href="./favicon_io/site.webmanifest">
   <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
   <div id="main">
+
+    <!-- page 1 html starts from here -->
+
     <div id="page1">
 
       <div id="nav">
@@ -61,15 +64,12 @@
 
       <div id="p1image">
         <img id="logo" src="./Gemini_Generated_Image_pxvrtdpxvrtdpxvr-modified.png" alt="">
-
       </div>
-
-
 
     </div>
 
 
-
+<!-- page 2 html starts from here -->
 
 
     <div id="page2">
@@ -124,6 +124,7 @@
     </div>
 
 
+    <!-- page 4 html starts from here -->
 
     <div id="page3">
       <h1>Features</h1>
@@ -175,6 +176,9 @@
       </div>
     </div>
 
+
+
+    <!-- page 4 html starts from here -->
 
 
     <div id="page4">
@@ -281,8 +285,7 @@
     </div>
 
 
-
-
+    <!-- footer html starts from here -->
 
     <div id="fo">
       <h1>We'll be <span>Live</span> Soon !!!!</h1>
@@ -290,23 +293,11 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
   </div>
 
 
 
-
-
-
+  <!-- scripts added here -->
 
 
   <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
